<resources>
    <string name="app_name">TonnerDelivery</string>
    <string name="hint_email">Digite seu Email</string>
    <string name="hint_senha">Digite sua senha</string>
    <string name="botao_logar">Logar</string>
    <string name="botao_cadastrar_produto">Cadastrar</string>
    <string name="titulo_permissao_neg">Permissoões Negadas</string>
    <string name="msg_permissao_neg">Para utilizar esse App é necessário aceitar as permissões</string>
    <string name="msg_cadastre">Não tem conta? Cadastre-se!</string>
    <string name="hint_digite_nome">Nome</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="action_settings">Configuração</string>
    <string name="action_sair">Sair</string>
    <string name="action_add_produto">Adicionar</string>
    <string name="msg_alerta_cadastrar_produto">Preencha todos os campos para cadastrar o produto</string>
    <!-- Atributos usados pelo ProgressDialog -->
    <string name="progress_dialog_login">Validando usuaário...</string>
    <!-- Atributos usados na Activity Cadastro Usuario utilizado no tratamento de exceptions de erros de cadastro -->
    <string name="erro_exception_cadastro_weak_password">Digite uma senha mais forte com mínimo 6 caracteres</string>
    <string name="erro_excetion_cadastro_auth_invalid">Digite um email válido</string>
    <string name="erro_excetion_cadastro_auth_user_colision">Email já cadastrado. Digite outro email</string>
    <string name="erro_excetion_cadastro_generico">Ao cadastrar usuário. Digite outro email</string>
    <!-- Atributos usados na Activity Cadastro de Produto -->
    <string name="titulo_id_do_produto">Código Produto: </string>
    <string name="hint_id_do_produto">Gerado ao finalizar cadastro</string>
    <string name="titulo_tipo_produto">Tipo de Produto: </string>
    <string name="titulo_marca_produto">Marca: </string>
    <string name="titulo_produto">Título: </string>
    <string name="titulo_descricao_produto">Descrição: </string>
    <string name="titulo_valor_produto">Valor: (R$)</string>
    <string name="titulo_qtd_produto">Saldo em estoque: </string>
    <string name="hint_titulo_produto">Insira o título do produto</string>
    <string name="hint_descricao_produto">Insira uma breve descrição do produto</string>
    <string name="hint_valor_produto">Insira o valor do produto</string>
    <string name="hint_qtd_produto">Quantidade do produto em estoque</string>

    <!-- Atributos usados na Activity Login utilizado no tratamento de exceptions de erros de Login -->
    <string name="erro_exception_login_auth_invalid_user">Email não cadastrado ou o usuário foi bloqueado</string>
    <string name="erro_exception_login_auth_invalid_password">Senha incorreta. Tente novamente</string>
    <string name="erro_exception_login_generico">Erro ao logar usuário</string>
    <string name="facebook_app_id">109393189754072</string>
    <string name="account_kit_client_token">4e7f29ebb0e38e9aa150eb7bfe5764c7</string>
    <string name="ak_login_protocol_scheme">ak109393189754072</string>
    <string name="fb_login_protocol_scheme">fb109393189754072</string>
    <!-- Atributos usados nas Toolbars -->
    <string name="tb_title_cadastro_produto">Cadastrar Produto</string>
    <!-- Itens opçoes spinner Tipo de produto na tela cadastro produto -->
    <string name="item_spinner_selecione_tipo_de_produto">Selecione o produto</string>
    <string name="item_spinner_cartucho">Cartucho</string>
    <string name="item_spinner_tonner">Tonner</string>
    <!-- Itens opçoes spinner Marca de produtos na tela cadastro produto -->
    <string name="item_spinner_marca_selecione_a_marca">Selecione a marca</string>
    <string name="item_spinner_marca_hp">HP</string>
    <string name="item_spinner_marca_canon">Canon</string>
    <string name="item_spinner_marca_epson">Epson</string>
    <string name="item_spinner_marca_samsung">Samsung</string>
    <string name="item_spinner_marca_outro">Outra</string>
    <!-- Array Itens Spinner Tipo de Produto -->
    <string-array name="spinner_produto_options">
        <item>@string/item_spinner_selecione_tipo_de_produto</item>
        <item>@string/item_spinner_cartucho</item>
        <item>@string/item_spinner_tonner</item>
    </string-array>
    <!-- Array Itens Spinner Marca do Produto -->
    <string-array name="spinner_marca_options">
        <item>@string/item_spinner_marca_selecione_a_marca</item>
        <item>@string/item_spinner_marca_hp</item>
        <item>@string/item_spinner_marca_canon</item>
        <item>@string/item_spinner_marca_epson</item>
        <item>@string/item_spinner_marca_samsung</item>
        <item>@string/item_spinner_marca_outro</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
