<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dfsolutions.com.tonnerdelivery.activity.LoginActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="@dimen/largura_logo"
        android:layout_height="@dimen/altura_logo"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_id"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_email"
        android:textColor="@color/textColorPrimary"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/senha_id"
        android:layout_below="@+id/email_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_senha"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/botao_logar"
        android:id="@+id/botao_logar_id"
        android:layout_below="@+id/senha_id"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:theme="@style/botaoPadrao"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/msg_cadastre"
        android:id="@+id/textView"
        android:layout_below="@+id/botao_logar_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:textColor="@color/textColorPrimary"
        android:onClick="abrirCadastroUsuario"/>
</RelativeLayout>
