<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dfsolutions.com.tonnerdelivery.activity.CadastroUsuario"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical|center_horizontal">


    <ImageView
        android:layout_width="@dimen/largura_logo_cadastro"
        android:layout_height="@dimen/altura_logo_cadastro"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/usuario" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/cadastro_nome_id"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:textColor="@color/textColorPrimary"
        android:hint="@string/hint_digite_nome" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/cadastro_email_id"
        android:layout_below="@+id/cadastro_nome_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/textColorPrimary"
        android:hint="@string/hint_email" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/cadastro_senha_id"
        android:layout_below="@+id/cadastro_email_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/textColorPrimary"
        android:hint="@string/hint_senha" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/botao_cadastrar"
        android:id="@+id/botao_cadastrar_id"
        android:layout_below="@+id/cadastro_senha_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textColor="@color/textColorPrimary"
        android:theme="@style/botaoPadrao"/>/>
</RelativeLayout>
